--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "20.9.o"
+  },
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
