--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": "20.9.o"
+    "node": "20.9.0"
   },
   "dependencies": {
     "ejs": "^3.1.9",
